# hyper_samen_one

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/build-windows/: SKILL.md
.claude/skills/excel-data/: SKILL.md
.claude/skills/persian-ui/: SKILL.md
.github/workflows/: release.yml
app/: __init__.py  __version__.py
app/backend/: __init__.py  alerts.py  auth.py  config.py  excel_service.py  inventory_repo.py  logging_setup.py  models.py  user_store.py  validators.py
app/frontend/: __init__.py  app_qt.py  forgot_password_dialog.py  import_dialog.py  inventory_view.py  login_view.py  logs_view.py  main_window.py  product_detail_dialog.py  product_dialog.py  reports_view.py  users_view.py  utils_fa.py
app/frontend/assets/: README.md
app/frontend/i18n/: __init__.py  fa.py
app/frontend/widgets/: __init__.py  common.py  search_bar.py
data/company_logos/: README.md
data/product_images/: README.md
spec/: SPEC.md  data-model.md  ui-spec.md
tools/: build_exe.py
