[project]
name = "hyper-samen-one"
dynamic = ["version"]
description = "سامانه مدیریت موجودی هایپرمارکت ثامن — Hyper Market Samen inventory management"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Hyper Market Samen" }]

dependencies = [
    "PySide6>=6.7",
    "jdatetime>=4.1",
    "bcrypt>=4.1",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "msoffcrypto-tool>=5.4",
]

[project.scripts]
hyper-samen = "main:main"

[tool.setuptools.dynamic]
version = { attr = "app.__version__.__version__" }

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
